make pending value invisible until backend bug fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,3 +73,6 @@ others span {
 	font-weight: normal;
 	color: green;
 }
+#pdiv {
+	opacity: 0;
+}
